@@ -1,6 +1,8 @@
 2006-02-02  Albert Chu  <chu11@llnl.gov>
 
-	* libfreeipmi/src/ipmi-sol-cmds.c
+	* libfreeipmi/src/ipmi-sensor-utils.c
+	(ipmi_sensor_get_decode_params_old,
+	ipmi_sensor_get_decode_params), libfreeipmi/src/ipmi-sol-cmds.c
 	(ipmi_cmd_sol_conf_get_sol_enable2,
 	ipmi_cmd_sol_conf_sol_enable_disable2, fill_get_sol_conf_param,
 	fill_sol_conf_sol_enable_disable), libfreeipmi/src/ipmi-pef-cmds.c
